@@ -208,7 +208,8 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0001928: graph_image.php does not check local_graph_id
 -bug#0001934: Poller sig_handler Bug
 -bug#0001936: Removing Data Sources is Inneficient 
--bug#0001937: The Cacti Technical Support Page Uses Check Table Which Blocks 
+-bug#0001937: The Cacti Technical Support Page Uses Check Table Which Blocks
+-bug#0001939: Do not query for items_perhost if concurrent_processes == 1
 -bug#0001941: Queries are run twice
 -bug: accept "Connection refused" on TCP ping tests
 -bug: add missing row selection to graph preview
